; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/powerplay/hwmgr/extr_smu_helper.c_phm_wait_for_indirect_register_unequal.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/powerplay/hwmgr/extr_smu_helper.c_phm_wait_for_indirect_register_unequal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pp_hwmgr = type { i32* }

@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @phm_wait_for_indirect_register_unequal(%struct.pp_hwmgr* %0, i64 %1, i64 %2, i64 %3, i64 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.pp_hwmgr*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  store %struct.pp_hwmgr* %0, %struct.pp_hwmgr** %7, align 8
  store i64 %1, i64* %8, align 8
  store i64 %2, i64* %9, align 8
  store i64 %3, i64* %10, align 8
  store i64 %4, i64* %11, align 8
  %12 = load %struct.pp_hwmgr*, %struct.pp_hwmgr** %7, align 8
  %13 = icmp eq %struct.pp_hwmgr* %12, null
  br i1 %13, label %19, label %14

14:                                               ; preds = %5
  %15 = load %struct.pp_hwmgr*, %struct.pp_hwmgr** %7, align 8
  %16 = getelementptr inbounds %struct.pp_hwmgr, %struct.pp_hwmgr* %15, i32 0, i32 0
  %17 = load i32*, i32** %16, align 8
  %18 = icmp eq i32* %17, null
  br i1 %18, label %19, label %22

19:                                               ; preds = %14, %5
  %20 = load i32, i32* @EINVAL, align 4
  %21 = sub nsw i32 0, %20
  store i32 %21, i32* %6, align 4
  br label %35

22:                                               ; preds = %14
  %23 = load %struct.pp_hwmgr*, %struct.pp_hwmgr** %7, align 8
  %24 = getelementptr inbounds %struct.pp_hwmgr, %struct.pp_hwmgr* %23, i32 0, i32 0
  %25 = load i32*, i32** %24, align 8
  %26 = load i64, i64* %8, align 8
  %27 = load i64, i64* %9, align 8
  %28 = call i32 @cgs_write_register(i32* %25, i64 %26, i64 %27)
  %29 = load %struct.pp_hwmgr*, %struct.pp_hwmgr** %7, align 8
  %30 = load i64, i64* %8, align 8
  %31 = add nsw i64 %30, 1
  %32 = load i64, i64* %10, align 8
  %33 = load i64, i64* %11, align 8
  %34 = call i32 @phm_wait_for_register_unequal(%struct.pp_hwmgr* %29, i64 %31, i64 %32, i64 %33)
  store i32 %34, i32* %6, align 4
  br label %35

35:                                               ; preds = %22, %19
  %36 = load i32, i32* %6, align 4
  ret i32 %36
}

declare dso_local i32 @cgs_write_register(i32*, i64, i64) #1

declare dso_local i32 @phm_wait_for_register_unequal(%struct.pp_hwmgr*, i64, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
